--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.10.4",
     "hbs": "^2.7.0",
     "jquery": "^2.1.1",
-    "react": "^0.12.1"
+    "react": "^0.12.1",
+    "reflux": "0.2.2"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
