--- a/package.json
+++ b/package.json
@@ -5,25 +5,29 @@
   "main": "index.js",
   "author": "frefor",
   "dependencies": {
+    "bootstrap": "^3.3.1",
     "express": "^4.10.4",
     "hbs": "^2.7.0",
     "jquery": "^2.1.1",
     "react": "^0.12.1",
+    "react-bootstrap": "^0.13.0",
     "reflux": "0.2.2"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.2.1",
-    "grunt-react": "^0.10.0",
-    "karma": "~0.10.9",
+    "grunt-cli": "~0.1.13",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-sass": "^0.8.1",
-    "karma-script-launcher": "~0.1.0",
+    "grunt-karma": "~0.6.2",
+    "grunt-react": "^0.10.0",
+    "grunt-version-copy-bower-components": "^0.1.11",
+    "karma": "~0.10.9",
     "karma-chrome-launcher": "~0.1.2",
     "karma-jasmine": "~0.1.5",
     "karma-phantomjs-launcher": "~0.1.2",
-    "karma-story-reporter": "~0.2.2",
-    "grunt-karma": "~0.6.2",
-    "grunt-cli": "~0.1.13",
-    "karma-sauce-launcher": "~0.1.8"
+    "karma-sauce-launcher": "~0.1.8",
+    "karma-script-launcher": "~0.1.0",
+    "karma-story-reporter": "~0.2.2"
   }
 }
