--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "bootstrap": "^3.3.1",
     "express": "^4.10.4",
     "hbs": "^2.7.0",
-    "jquery": "~3.0.0",
+    "jquery": ">=3.4.0",
     "react": "^0.12.1",
     "react-bootstrap": "^0.13.0",
     "reflux": "0.2.2"
